# annex96_common_exercise_1

./: .gitignore  README.md  citylearn_observation_discrictLoad.py  deploy_model.py  generate_target.py  generate_target_same_day.py  pyproject.toml
citylearn/: building.py  building_sabrina.py  citylearn.py  energy_model.py
citylearn/agents/: base.py  rbc.py
citylearn_old/: building.py  data.py
data/datasets/annex96_ce1_tx_neighborhood/: district_target.csv  schema.json
data/datasets/annex96_ce1_vt_neighborhood/: district_target.csv  schema.json
notebooks/: CE1_quickstart (1).ipynb  CE1_quickstart.ipynb  CE1_quickstart_sabrina.ipynb  Quick_Start_CE1_new
outputs/annex96_ce1_tx_neighborhood/obs/rbc/: action_building_0.csv  action_building_1.csv  action_building_10.csv  action_building_11.csv  action_building_12.csv  action_building_13.csv  action_building_14.csv  action_building_15.csv  action_building_16.csv  action_building_17.csv  action_building_18.csv  action_building_19.csv  action_building_2.csv  action_building_20.csv  action_building_21.csv  action_building_22.csv  action_building_23.csv  action_building_24.csv  action_building_3.csv  action_building_4.csv  action_building_5.csv  action_building_6.csv  action_building_7.csv  action_building_8.csv  action_building_9.csv  district_obs.csv  obs_building_0.csv  obs_building_1.csv  obs_building_10.csv  obs_building_11.csv  obs_building_12.csv  obs_building_13.csv  obs_building_14.csv  obs_building_15.csv  obs_building_16.csv  obs_building_17.csv  obs_building_18.csv  (+14 more)
utilities/: generate_target_same_day.py
(+52 files in other folders)
